--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "A Caesar Cipher (or more simply known as a shift cipher) is one of the simplest and most widely known encryption techniques. It works by shifting the alphabet a number of spaces (known as your key) along the alphabet. Therefore, the letter e encrypted using this cipher with a left shift of 3 (-3) would become a b. You can see more examples in the table below:",
   "main": "caesar.js",
+  "type": "module",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "node_modules/.bin/mocha",
     "start": "node ./caesar.js"
   },
   "repository": {
